# drumlabooh

./: .gitmodules  CMakeLists-alloses.txt  CMakeLists.txt  NEWS  README.md  drumlabooh-net-installer-script.sh  drumpecker.jucer  install.nsi
.github/workflows/: cmake-art-thin-windows.yml  cmake-art-ubuntu.yml  cmake-art-vst-lv2-ubuntu-24.yml  cmake-art-vst-lv2-ubuntu.yml  cmake-art-vst-ubuntu.yml  cmake-art-windows.yml  cmake-mac.yml  cmake-multi-platform.yml  cmake-nsis-windows-v2.yml  cmake-nsis-windows-v3.yml  cmake-nsis-windows.yml  cmake-ubuntu.yml  cmake-windows.yml
Builds/LinuxMakefile/: Makefile
JuceLibraryCode/: JuceHeader.h  JuceLV2Defines.h  JucePluginDefines.h
JuceLibraryCode/modules/juce_audio_plugin_client/VST/: juce_VST_Wrapper.cpp
JuceLibraryCode/modules/juce_core/: juce_core.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  drumcell.cpp  drumcell.h  dsp.cpp  dsp.h  exceptions.cpp  fx-resofilter.cpp  fx-resofilter.h  images.h  kits.cpp  kits.h  pairfile.cpp  pairfile.h  pugiconfig.hpp  resample.txt  resampler.c  resampler_class.cpp  resampler_function.cpp  topheader.cpp  topheader.h  utl.cpp  utl.h
Source/docs/: index.md  manual.md
b/: CMakeCache.txt  Makefile  cmake_install.cmake  juce_lv2_helper  juce_vst3_helper
b/JUCE/: JUCEConfig.cmake  JUCEExportConfig.cmake  Makefile  cmake_install.cmake
b/JUCE/modules/: Makefile  cmake_install.cmake
b/JUCE/tools/: CMakeCache.txt  JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
b/JUCE/tools/modules/: Makefile  cmake_install.cmake
b/drumpecker_artefacts/JuceLibraryCode/: Defs.txt  Info.txt  JuceHeader.h  JuceLV2Defines.h
b/drumpecker_artefacts/LV2/drumpecker.lv2/: dsp.ttl  manifest.ttl  ui.ttl
b/drumpecker_artefacts/VST3/drumpecker.vst3/Contents/Resources/: moduleinfo.json
docs/: about.html  about.md  donate-en.html  donate-ru.html  donate.html  donate.md  getkits.html  index-en.html  index-ru.html  index.html  index.md  install-en.html  install-ru.html  install.html  install.md  manual-en.html  manual-ru.html  manual.html  manual.md  news-en.html  news-ru.html  news.html  styles.css
docs/ru/: donate.html  index.html  install.html  manual.html  news.html
